server/crates/djinn-agent/src/extension/snapshots/djinn_agent__extension__tests__worker_tool_schemas.snap
---
source: crates/djinn-agent/src/extension/mod.rs
expression: tool_schemas_worker()
---
[
  {
    "description": "Show details of a work item including recent activity and blockers.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_show"
  },
  {
    "description": "List tasks with optional filters and pagination.",
    "inputSchema": {
      "properties": {
        "issue_type": {
          "type": "string"
        },
        "label": {
          "type": "string"
        },
        "limit": {
          "type": "integer"
        },
        "offset": {
          "type": "integer"
        },
        "parent": {
          "description": "Epic ID to filter by",
          "type": "string"
        },
        "priority": {
          "type": "integer"
        },
        "sort": {
          "type": "string"
        },
        "status": {
          "type": "string"
        },
        "text": {
          "description": "Free-text search in title/description",
          "type": "string"
        }
      },
      "type": "object"
    },
    "name": "task_list"
  },
  {
    "description": "Query a task's activity log with optional filters. Returns comments, status transitions, verification results, and other events. Use to inspect Lead guidance, reviewer feedback, or verification history.",
    "inputSchema": {
      "properties": {
        "actor_role": {
          "description": "Filter by actor: lead, reviewer, worker, verification, system",
          "type": "string"
        },
        "event_type": {
          "description": "Filter by event type: comment, status_changed, commands_run, merge_conflict, task_review_start",
          "type": "string"
        },
        "id": {
          "description": "Task UUID or short ID",
          "type": "string"
        },
        "limit": {
          "description": "Max entries to return (default 30, max 50)",
          "type": "integer"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    },
    "name": "task_activity_list"
  },
  {
    "description": "Read a note by permalink or title.",
    "inputSchema": {
      "properties": {
        "identifier": {
          "description": "Permalink or title",
          "type": "string"
        }
      },
      "required": [
        "identifier"
      ],
      "type": "object"
    },
    "name": "memory_read"
  },
  {
    "description": "Search notes in project memory.",
    "inputSchema": {
      "properties": {
        "folder": {
          "type": "string"
        },
        "limit": {
          "type": "integer"
        },
        "query": {
          "type": "string"
        },
        "task_id": {
          "description": "Task ID for affinity scoring; defaults to the current session task",
          "type": "string"
        },
        "type": {
          "type": "string"
        }
      },
      "required": [
        "query"
      ],
      "type": "object"
    },
    "name": "memory_search"
  },
  {
    "description": "List notes in project memory. Returns compact summaries without full content.",
    "inputSchema": {
      "properties": {
        "depth": {
          "description": "Depth control: 0 = unlimited, 1 = exact folder (default), N = N levels",
          "type": "integer"
        },
        "folder": {
          "description": "Filter by folder (e.g. \"decisions\")",
          "type": "string"
        },
        "type": {
          "description": "Filter by note type (e.g. \"adr\", \"reference\", \"research\")",
          "type": "string"
        }
      },
      "type": "object"
    },
    "name": "memory_list"
  },
  {
    "description": "Execute shell commands in the task worktree. Commands always run from the worktree root.",
    "inputSchema": {
      "properties": {
        "command": {
          "description": "Shell command to execute",
          "type": "string"
        },
        "timeout_ms": {
          "description": "Timeout in milliseconds (default 120000)",
          "type": "integer"
        }
      },
      "required": [
        "command"
      ],
      "type": "object"
    },
    "name": "shell"
  },
  {
    "description": "Read a file with line numbers and pagination. Rejects binary files.",
    "inputSchema": {
      "properties": {
        "file_path": {
          "type": "string"
        },
        "limit": {
          "minimum": 1,
          "type": "integer"
        },
        "offset": {
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "file_path"
      ],
      "type": "object"
    },
    "name": "read"
  },
  {
    "description": "Query the Language Server Protocol for code navigation. Operations: hover (type info at position), definition (go to definition), references (find all references), symbols (list document symbols with optional depth/kind/name filtering). Line and character are 1-based for non-symbol operations.",
    "inputSchema": {
      "properties": {
        "character": {
          "description": "1-based column number (required for hover, definition, references when symbol is omitted)",
          "minimum": 1,
          "type": "integer"
        },
        "depth": {
          "description": "Maximum nesting depth for operation='symbols'. 0 = top-level only; omitted = unlimited",
          "minimum": 0,
          "type": "integer"
        },
        "file_path": {
          "description": "Absolute or worktree-relative file path",
          "type": "string"
        },
        "kind": {
          "description": "Comma-separated symbol kind filter for operation='symbols' (e.g. function,method,struct,class,interface,enum,variable,constant,module,field,property,constructor,type_parameter)",
          "type": "string"
        },
        "line": {
          "description": "1-based line number (required for hover, definition, references)",
          "minimum": 1,
          "type": "integer"
        },
        "name_filter": {
          "description": "Case-insensitive substring filter applied to symbol names and name paths for operation='symbols'",
          "type": "string"
        },
        "operation": {
          "description": "LSP operation to perform",
          "enum": [
            "hover",
            "definition",
            "references",
            "symbols"
          ],
          "type": "string"
        },
        "symbol": {
          "description": "Optional symbol name path for hover, definition, or references as an alternative to line+character",
          "type": "string"
        }
      },
      "required": [
        "operation",
        "file_path"
      ],
      "type": "object"
    },
    "name": "lsp"
  },
  {
    "description": "Query the repository dependency graph built from SCIP indexer output. Operations: neighbors (edges in/out of a node), ranked (top nodes by PageRank), impact (transitive dependents), implementations (find implementors of a trait/interface symbol).",
    "inputSchema": {
      "properties": {
        "direction": {
          "description": "Edge direction filter for neighbors (omit for both)",
          "enum": [
            "incoming",
            "outgoing"
          ],
          "type": "string"
        },
        "key": {
          "description": "Node key: file path or SCIP symbol string (required for neighbors, impact, implementations)",
          "type": "string"
        },
        "kind_filter": {
          "description": "Node kind filter for ranked",
          "enum": [
            "file",
            "symbol"
          ],
          "type": "string"
        },
        "limit": {
          "description": "Max results for ranked (default 20) or max traversal depth for impact (default 3)",
          "minimum": 1,
          "type": "integer"
        },
        "operation": {
          "description": "Graph query to perform",
          "enum": [
            "neighbors",
            "ranked",
            "impact",
            "implementations"
          ],
          "type": "string"
        },
        "project_path": {
          "description": "Absolute path to project root",
          "type": "string"
        }
      },
      "required": [
        "operation",
        "project_path"
      ],
      "type": "object"
    },
    "name": "code_graph"
  },
  {
    "description": "Fetch the full log for a GitHub Actions CI job. When CI fails, the activity log tells you the job_id. Call this tool to see the actual error output. Optionally filter to a specific failed step name. If the output is large, use output_view or output_grep to navigate it.",
    "inputSchema": {
      "properties": {
        "job_id": {
          "description": "The GitHub Actions job ID from the CI failure activity",
          "type": "integer"
        },
        "step": {
          "description": "Optional step name to filter the log to (e.g. 'Tests')",
          "type": "string"
        }
      },
      "required": [
        "job_id"
      ],
      "type": "object"
    },
    "name": "ci_job_log"
  },
  {
    "description": "Paginated view of a truncated tool output. When a tool result was truncated, the full output is stashed and can be browsed here by tool_use_id.",
    "inputSchema": {
      "properties": {
        "limit": {
          "description": "Number of lines to return (default 200)",
          "minimum": 1,
          "type": "integer"
        },
        "offset": {
          "description": "Line offset (0-based, default 0)",
          "minimum": 0,
          "type": "integer"
        },
        "tool_use_id": {
          "description": "The tool_use_id from the truncated result",
          "type": "string"
        }
      },
      "required": [
        "tool_use_id"
      ],
      "type": "object"
    },
    "name": "output_view"
  },
  {
    "description": "Regex search within a truncated tool output. Returns matching lines with context from the full stashed output.",
    "inputSchema": {
      "properties": {
        "context_lines": {
          "description": "Lines of context around each match (default 3)",
          "minimum": 0,
          "type": "integer"
        },
        "pattern": {
          "description": "Regex pattern to search for",
          "type": "string"
        },
        "tool_use_id": {
          "description": "The tool_use_id from the truncated result",
          "type": "string"
        }
      },
      "required": [
        "tool_use_id",
        "pattern"
      ],
      "type": "object"
    },
    "name": "output_grep"
  },
  {
    "description": "Write content to a file, creating it or overwriting if it exists. Path must be within the task worktree.",
    "inputSchema": {
      "properties": {
        "content": {
          "description": "File content to write",
          "type": "string"
        },
        "path": {
          "description": "Absolute or worktree-relative file path",
          "type": "string"
        }
      },
      "required": [
        "path",
        "content"
      ],
      "type": "object"
    },
    "name": "write"
  },
  {
    "description": "Edit a file by replacing exact text. Finds old_text and replaces with new_text. Fails if old_text is not found or is ambiguous (appears multiple times).",
    "inputSchema": {
      "properties": {
        "new_text": {
          "description": "Replacement text",
          "type": "string"
        },
        "old_text": {
          "description": "Exact text to find and replace",
          "type": "string"
        },
        "path": {
          "description": "Absolute or worktree-relative file path",
          "type": "string"
        }
      },
      "required": [
        "path",
        "old_text",
        "new_text"
      ],
      "type": "object"
    },
    "name": "edit"
  },
  {
    "description": "Apply a patch to one or more files using a custom LLM-friendly format. Uses content-based context matching (not line numbers). Format:\n\n*** Begin Patch\n*** Update File: path/to/file.rs\n@@ context_line_from_file\n context line (unchanged)\n-old line to remove\n+new line to add\n context line (unchanged)\n\n*** Add File: path/to/new_file.rs\n+line 1\n+line 2\n\n*** Delete File: path/to/old_file.rs\n*** End Patch\n\nRules: ' ' prefix = context (must match file), '-' = delete, '+' = add. The @@ line text is searched in the file to locate each chunk. Multiple @@ chunks per file are allowed. Files being updated or deleted must be read first.",
    "inputSchema": {
      "properties": {
        "patch": {
          "description": "Patch content in the custom format (see tool description)",
          "type": "string"
        }
      },
      "required": [
        "patch"
      ],
      "type": "object"
    },
    "name": "apply_patch"
  },
  {
    "description": "Request Lead intervention for the current task. Use when the task is too large to complete reliably, the design is ambiguous, or you are stuck. Adds a comment with your reason and suggested breakdown, then escalates to the Lead queue. Your session will effectively end after this call.",
    "inputSchema": {
      "properties": {
        "id": {
          "description": "Task UUID or short_id",
          "type": "string"
        },
        "reason": {
          "description": "Why Lead intervention is needed (e.g. task too large, design ambiguous, blocked on decision)",
          "type": "string"
        },
        "suggested_breakdown": {
          "description": "Optional suggested split: list of smaller tasks the Lead should create",
          "type": "string"
        }
      },
      "required": [
        "id",
        "reason"
      ],
      "type": "object"
    },
    "name": "request_lead"
  },
  {
    "description": "Signal that the worker has finished implementing the task. Provide a summary of changes made and list of files modified. Your session ends after this call.",
    "inputSchema": {
      "properties": {
        "files_changed": {
          "description": "List of files modified during this session",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "next_patrol_minutes": {
          "description": "Architect only: minutes until the next patrol should run (5-60). Omit for non-architect roles.",
          "type": "integer"
        },
        "remaining_concerns": {
          "description": "Any outstanding concerns or caveats for the reviewer",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "summary": {
          "description": "Brief summary of the work completed",
          "type": "string"
        },
        "task_id": {
          "description": "Task UUID or short_id",
          "type": "string"
        }
      },
      "required": [
        "task_id",
        "summary"
      ],
      "type": "object"
    },
    "name": "submit_work"
  }
]
